# Atlas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  repo-tree.txt  repo.txt
docs/constitution/: CONSTITUTION.md
docs/decisions/: adr-0006-fact-engine.md
production/fixtures/: README.md
production/specifications/: source-selection.md
production/specifications/contracts/: provider-output.md
production/specifications/providers/: kompass.md
research/: kompass-research.md
samples/: demo_buyers.xlsx
scripts/: 01-folders.ps1  02-quality-gates.ps1
src/atlas/: __main__.py  application.py
src/atlas/brain/: __init__.py
src/atlas/buyer_engine/: __init__.py
src/atlas/discovery/: __init__.py
src/atlas/networking/: __init__.py  http_client.py
src/atlas/web/: app.py  routes.py
tests/brain/conclusions/: test_conclusion_engine.py
tests/brain/decisions/: test_decision_engine.py
tests/brain/facts/: test_fact_engine.py
tests/brain/models/: test_company.py  test_evidence.py  test_evidence_source.py
tests/brain/reports/: test_company_brain_report.py
tests/brain/repositories/: test_company_repository.py  test_evidence_repository.py
tests/brain/services/: test_brain_query_service.py  test_company_brain_report_service.py  test_company_decision.py  test_company_dossier.py  test_company_facts.py  test_company_trust.py
tests/brain/trust/: test_trust_engine.py
tests/brain/utils/: test_immutable.py
tests/networking/: test_http_client.py
tools/: capture_opencorporates.py  capture_opencorporates_fixture.py  verify_kompass_live.py
(+125 files in other folders)
