[project]
name = "atlas"
version = "0.1.0"
description = "AI-powered export intelligence platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.16,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-cov>=6.2,<7.0",
    "ruff>=0.12,<1.0",
    "mypy>=1.17,<2.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true
